<resources>
    <string name="txtUpdateInformation">"1. 新增账户余额修改记录, 历史修改一清二楚
2. 优化对账界面, 显示条目增多, 页面更美观
3. 解决修改当前欠款使本期应还款出错的问题"</string>
<string name="hello_world">Hello world!</string>
    <string name="menu_settings">退出</string>
    <string name="title_activity_main">销售管家</string>
	 <string name="app_name">销售管家</string>
    <string name="widget4x1">挖财(4X1)</string>
    <string name="widget2x1">挖财(2X1)</string>
    <string name="txtParamError">参数错误!</string>
    <string name="unknownError">未知错误</string>
    <string name="netRedirected">网络不给力, 请换一种联网方式或稍后重试!</string>
    <string name="netwrokConnectError">网络异常,请检查网络连接</string>
    <string name="txtCacheHttpError">缓存数据错误, 请保证您有足够的存储空间后重试!</string>
    <string name="txtUnzipError">数据出错, 请稍候重试! 或联系挖财解决!</string>
    <string name="txtNoNetworkPrompt">无可用网络连接, 请检查后重试</string>
    <string name="loadTitle">加载中</string>
    <string name="LoadContent">请稍后...</string>
    <string name="txtExceptionOper">操作发生异常:</string>
    <string name="networkError">联网失败!</string>
    <string name="networkOffline">网络已断开, 请连接后重试!</string>
    <string name="networkTimeout">网络不给力, 请稍后再试!</string>
    <string name="networkNoAPN">请配置接入点后再试, 详情请咨询运营商!</string>
    <string name="promptGenerateFixItem">生成固定记录可能需要一段时间, 请耐心等待…</string>
    <string name="errorReport">错误报告</string>
    <string name="errorReportDetail">感谢您对挖财的支持, 请简单描述一下出错情况</string>
    <string name="errorReportTitle">请选择电子邮件发送</string>
    <string name="errorNoAppToSend">无可用的发送方式, 请先配置email帐号</string>
    <string name="weiboErrorNotConnect">操作失败, 您还没有关联微博!</string>
    <string name="weiboErrorBadRequest">无效的请求或者您的网络频率受限!</string>
    <string name="weiboErrorNotAuth">认证证书错误或者缺失!</string>
    <string name="weiboErrorForbidden">请求不合法!</string>
    <string name="weiboErrorNotFound">请求的内容或资源无效, 如用户不存在!</string>
    <string name="weiboErrorNotAcceptable">请求格式错误!</string>
    <string name="weiboErrorServerInternal">微博未知错误! 可发邮件给微博团队查找原因!</string>
    <string name="weiboErrorBadGateway">微博已关闭或者正在更新!</string>
    <string name="weiboErrorBusy">微博服务器繁忙, 请稍后重试!</string>
    <string name="weiboErrorResend">您已经分享过了, 无需重复分享!</string>
    <string name="weiboErrorEmpty">写点什么东西吧…</string>
    <string name="weiboTokenExpired">微博授权已失效, 请重新授权!</string>
    <string name="weiboTextCountExceedLimitation">您发的信息超过字数限制, 请删减后再发布!</string>
    <string name="weiboUnsupportedImageFormat">图片类型不符, 请更换! 只支持JPG、PNG、GIF类型的图片</string>
    <string name="weiboUnsupportedImageSize">图片太大, 请更换!</string>
    <string name="weiboTencentErrorContentForbidden">此微博包含违规内容, 请删除违规内容后重新发布, 谢谢!</string>
    <string name="weiboTencentErrorAccess">禁止访问, 请联系腾讯微博客服解决此问题, 谢谢!</string>
    <string name="weiboTencentErrorChecking">微博审核中, 请稍后查看.</string>
    <string name="weiboWacaiNickname">"\@挖财 "</string>
    <string name="textTravel">出差</string>
    <string name="textLocal">本地</string>
    <string name="textYear">年</string>
    <string name="textMonth">月</string>
    <string name="textDay">日</string>
    <string name="textTo">至</string>
    <string name="textRealOutgo">实际支出</string>
    <string name="textReimbuserMoney">报销款</string>
    <string name="attachmentDownloadError">下载的附件没有文件信息, 请联系挖财解决!</string>
    <string name="illegalUser">用户名或密码错误, 请检查后重试!</string>
    <string name="txtUploadingBaseData">备份基础数据中…</string>
    <string name="txtDownloadingBaseData">下载基础数据…</string>
    <string name="txtDownloadStringFormat">已成功同步%1$d条数据…</string>
    <string name="txtRequestDownload">正在处理数据中…</string>
    <string name="txtPSWReset">挖财: 您的本地口令需要重新设置</string>
    <string name="alertHasNewAlert">您有%1$s条新的提醒</string>
    <string name="txtWacaiRemindCharge">挖财: 记账提醒</string>
    <string name="backupSuccess">"同步成功!
您可以在云端: www.wacai.com 浏览数据, 体验更多功能."</string>
    <string name="backupSuccessWithEmail">"同步成功!
通过手机注册后, 您可以在云端: www.wacai.com 浏览数据, 体验更多功能."</string>
    <string name="txtExitPromt">再按一次退出程序!</string>
    <string name="txtAlertTitleInfo">提示信息</string>
    <string name="txtOK">确认</string>
    <string name="txtSure">确定</string>
    <string name="txtCancel">取消</string>
    <string name="txtSearch">筛选</string>
    <string name="txtExit">退出</string>
    <string name="txtCalculator">计算器</string>
    <string name="txtAlertTitleError">错误提示</string>
    <string name="txtEnableNetworkWarning">不再显示该提醒</string>
    <string name="txtMainProgram">主程序</string>
    <string name="txtWriteTitle">记账</string>
    <string name="txtSearchTitle">搜索</string>
    <string name="txtShortcutsTitle">快速记账</string>
    <string name="txtNewNote">新增便签</string>
    <string name="txtEditNote">编辑便签</string>
    <string name="txtNetworkWarning">该操作将会产生网络流量, 请确认</string>
    <string name="txtOutgo">支出</string>
    <string name="txtIncome">收入</string>
    <string name="txtTransfer">转账</string>
    <string name="txtLoan">借贷</string>
    <string name="inputRecord">卖一单</string>
    <string name="txtContinueSave">再卖一单</string>
    <string name="txtKeepActivities">请取消\"开发者选项—不保留活动\"的选项, 该选项会影响挖财的正常使用, 导致无法顺利记账.</string>
    <string name="txtSelAll">全选</string>
    <string name="txtAverage">均分</string>
    <string name="softIntroduce">软件推荐</string>
    <string name="txtWarningTitle">请注意</string>
    <string name="txtCloseWarning">停用提醒</string>
    <string name="txtBalanceWarningNoLogin">您的账户余额已经少于您设置的警戒线!</string>
    <string name="txtBalanceWarning" formatted="false">您的%1$s余额已经少于或等于%2$s!</string>
    <string name="txtInputNameForShortcuts">请输入您要保存的快速记账模板名称!</string>
    <string name="txtContinuePrompt">保存成功! 请继续录入</string>
    <string name="viewPicture">查看图片</string>
    <string name="rePicture">重拍</string>
    <string name="txtEditComment">编辑备注</string>
    <string name="txtShortcutsMgr">模板管理</string>
    <string name="expenseSum">消费概况</string>
    <string name="myFootPrint">我的足迹</string>
    <string name="detail">明细</string>
    <string name="statement">报表</string>
    <string name="budget">预算</string>
    <string name="txtInputAddressTips">请输入号码!</string>
    <string name="txtNumExist">号码已存在白名单中</string>
    <string name="txtMySearch">账务搜索</string>
    <string name="outgoDetail">支出详情</string>
    <string name="incomeDetail">收入详情</string>
    <string name="transferDetail">转账详情</string>
    <string name="loanDetail">借贷详情</string>
    <string name="txtImportProgress">导入进度</string>
    <string name="txtImporting">导入中…</string>
    <string name="txtTaobaoAccountBinding">淘宝帐号绑定</string>
    <string name="txtAliPayAccountBinding">支付宝帐号绑定</string>
    <string name="txtTaobaoAccount">淘宝帐号</string>
    <string name="txtImportData">导入数据</string>
    <string name="txtRemoveBinding">解除绑定</string>
    <string name="dataSafePrompt">为了保障您的数据安全, 请登录挖财帐号.</string>
    <string name="alertRemoveBinding">确认解除淘宝帐号绑定?</string>
    <string name="alertRebindingConfirm">重新绑定新的淘宝帐号?</string>
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="hello">Hello World, TextActivity!</string>
    <string name="send">发  送</string>
    <string name="close">关  闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="alertImportTaobaoData">"温馨提示:
1. 本功能暂只支持淘宝购物数据的导入. 后续挖财将支持其它数据的导入, 敬请期待.

2. 若您记录过淘宝消费记录, 数据导入后可能会导致数据重复.

3. 若自动导入失败, 请点击导入数据, 若失败多次, 请解除绑定后重新导入."</string>
    <string name="promptHomeSetting">可选三项, 请取消已选项再试</string>
    <string name="closeSucceed">关闭成功</string>
    <string name="promptHomeNotComplete">选满三项才可保存</string>
    <string name="dimissPic">放弃编辑?</string>
    <string name="dataOperate">数据操作</string>
    <string name="netAlertSetting">联网提示设置</string>
    <string name="txtRemindCharge">记账提醒设置</string>
    <string name="basicSortMode">排序设置</string>
    <string name="moneyTypeSetting">本币设置</string>
    <string name="shortcutOperate">模版操作</string>
    <string name="loadAccountOperate">借贷账户操作</string>
    <string name="messageOperate">短信操作</string>
    <string name="noteOperate">便签操作</string>
    <string name="chooseOperate">选择操作</string>
    <string name="chooseAccount">账户选择</string>
    <string name="chooseMoneyType">币种选择</string>
    <string name="chooseMainType">支出大类</string>
    <string name="chooseSubType">支出小类</string>
    <string name="chooseTarget">商家选择</string>
    <string name="chooseIncomeTarget">付款方选择</string>
    <string name="chooseProject">项目选择</string>
    <string name="chooseIncomeType">收入类别</string>
    <string name="chooseQueryType">查询类型选择</string>
    <string name="addWhiteMember">新增白名单</string>
    <string name="chooseCycleType">周期选择</string>
    <string name="alertType">提醒类型</string>
    <string name="typeFilter">类型筛选</string>
    <string name="chooseMember">成员选择</string>
    <string name="alertHasNewAlertWithoutTitle">您有新的提醒, 点击查看</string>
    <string name="alertHasAutoUploadAlert">自动同步数据失败</string>
    <string name="alertBudgetAlert">预算提醒</string>
    <string name="alertBudgetConclusion">预算月度总结(%1$s)</string>
    <string name="txtAlertLoan">您与%1$s有借贷需要处理.</string>
    <string name="updateQuick">快速备份</string>
    <string name="backup">备份</string>
    <string name="noStatMessage">无统计信息</string>
    <string name="txtShareTo">"晒心情: "</string>
    <string name="txtStatShare">"晒账: "</string>
    <string name="txtShareMood">晒心情</string>
    <string name="txtShareAccount">晒账</string>
    <string name="txtSaveAsShortcut">设为模板</string>
    <string name="txtSave">保存</string>
    <string name="txtAagin">重新查询</string>
    <string name="txtSaveContinue">保存再记</string>
    <string name="txtInvalidMoney">请输入有效的金额!</string>
    <string name="noneMemberNotAllowed">请您至少为该记录指定一位成员!</string>
    <string name="txtMoneyExceedTotal">成员总金额不等于记账金额, 请检查!</string>
    <string name="txtNewTradeTitle">新增账务</string>
    <string name="txtEditTradeTitle">编辑账务</string>
    <string name="txtEditTradeTitleOutgo">编辑支出</string>
    <string name="txtEditTradeTitleIncome">编辑收入</string>
    <string name="txtEditTradeTitleTransfer">编辑转账</string>
    <string name="txtEditTradeTitleLoan">编辑借贷</string>
    <string name="txtEditScheduleData">修改固定收支记录, 请到固定收支管理界面操作!</string>
    <string name="txtToday">今天</string>
    <string name="txtMoneyIn">进价</string>
    <string name="txtAmount">数量</string>
    <string name="txtMoneyTab">标价</string>
    <string name="txtMoneyOut">售价</string>
    <string name="txtMoneyProfit">利润</string>
    <string name="txtCustomer">客户</string>
    <string name="txtStock">库存</string>
    <string name="txtCustomerNum">电话</string>
    <string name="txtCode">扫描条码</string>
    <string name="txtCodeSimple">条码</string>
    <string name="txtType">类别</string>
    <string name="txtMember">成员</string>
    <string name="txtTarget">商家</string>
    <string name="txtIncomeTarget">付款方</string>
    <string name="statCompareTitle">对比统计</string>
    <string name="statOutgoTitle">支出报表</string>
    <string name="statIncomeTitle">收入报表</string>
    <string name="statOutgoMainType">大类支出</string>
    <string name="statOutgoSubType">小类支出</string>
    <string name="statOutgoAcc">账户支出</string>
    <string name="statOutgoTarget">商家支出</string>
    <string name="statOutgoMember">成员支出</string>
    <string name="statOutgoPrj">项目支出</string>
    <string name="statIncomeType">类别收入</string>
    <string name="statIncomeAcc">账户收入</string>
    <string name="statIncomeMember">成员收入</string>
    <string name="statIncomePrj">项目收入</string>
    <string name="statCompareMonth">月收支差</string>
    <string name="statBudget">预算报表</string>
    <string name="statOutgoMonth">逐月支出</string>
    <string name="statIncomeMonth">逐月收入</string>
    <string name="statExpensePk">消费大PK</string>
    <string name="txtBalanceSheetBalanceTitle">账户余额</string>
    <string name="txtBalanceSheetLoanSumTitle">借贷总额</string>
    <string name="txtBalanceSheetSumTitel">净资产</string>
    <string name="pleaseAddAccount">请新增账户</string>
</resources>