<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rootPropertyTab" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/listHeight1">
            <com.wacai365.widget.Button android:id="@id/btnPrev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/prev_btn" android:layout_toLeftOf="@id/btnMoneyType" />
            <com.wacai365.widget.AutoAdjustTextView android:textSize="@dimen/txtSizeF4" android:textColor="@color/lightBlue" android:gravity="center" android:id="@id/btnMoneyType" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="@dimen/size120" android:layout_centerInParent="true" style="@style/whiteDownShadow" />
            <com.wacai365.widget.Button android:id="@id/btnNext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/next_btn" android:layout_toRightOf="@id/btnMoneyType" />
        </RelativeLayout>
        <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/paperMarginLR" android:layout_marginRight="@dimen/paperMarginLR" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/listHeight1" android:layout_marginLeft="@dimen/paperMarginLR" android:layout_marginRight="@dimen/paperMarginLR">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:baselineAligned="false" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/txtSizeF3" android:textColor="@color/black" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/txtBalanceSheetBalanceTitle" android:layout_weight="1.0" />
                <com.wacai365.widget.AutoAdjustTextView android:textSize="@dimen/txtSizeF3" android:textColor="@color/lightBlue" android:gravity="top|center" android:id="@id/tvAccBalance" android:paddingLeft="@dimen/size2" android:paddingRight="@dimen/size2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="0.00" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <View android:background="@color/divider" android:layout_width="1.0px" android:layout_height="fill_parent" android:layout_marginTop="@dimen/size5" android:layout_marginBottom="@dimen/size5" />
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:baselineAligned="false" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/txtSizeF3" android:textColor="@color/black" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/txtBalanceSheetLoanSumTitle" android:layout_weight="1.0" />
                <com.wacai365.widget.AutoAdjustTextView android:textSize="@dimen/txtSizeF3" android:textColor="@color/lightBlue" android:gravity="top|center" android:id="@id/tvClaim" android:paddingLeft="@dimen/size2" android:paddingRight="@dimen/size2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="0.00" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <View android:background="@color/divider" android:layout_width="1.0px" android:layout_height="fill_parent" android:layout_marginTop="@dimen/size5" android:layout_marginBottom="@dimen/size5" />
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:baselineAligned="false" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/txtSizeF3" android:textColor="@color/black" android:gravity="bottom|center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/txtBalanceSheetSumTitel" android:layout_weight="1.0" />
                <com.wacai365.widget.AutoAdjustTextView android:textSize="@dimen/txtSizeF3" android:textColor="@color/lightBlue" android:gravity="top|center" android:id="@id/tvDebt" android:paddingLeft="@dimen/size2" android:paddingRight="@dimen/size2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="0.00" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:background="@drawable/paper_bg2" android:paddingLeft="@dimen/paperShadeLR" android:paddingRight="@dimen/paperShadeLR" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/paperMarginLR" android:layout_marginRight="@dimen/paperMarginLR" android:layout_marginBottom="@dimen/paperMarginBottom" android:layout_weight="1.0">
            <TextView android:textColorHint="@color/lightGray" android:gravity="center" android:id="@id/tvListHint" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/pleaseAddAccount" />
            <ListView android:id="@id/lvPropertySum" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/paperShadeBottom" android:listSelector="@drawable/transparent" android:cacheColorHint="@null" android:divider="@color/divider" android:dividerHeight="1.0px" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <include layout="@layout/bottom_back_search" />
    </LinearLayout>
    <include layout="@layout/setting_default_popup" />
</RelativeLayout>
